--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Product Inventory</h1>
+        <h1>Inventory</h1>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/products">Products</a></li>
+                <li><a href="/products/new">New Product</a></li>
             </ul>
         </nav>
     </header>
