added some basic styling, single product show on progress

--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -8,7 +8,7 @@
 
 <section>
     <div class="each_product">
-        <div>Product Name: {{ product.name }}</div>
+        <div><a href="/products/{{product.id}}/show" >Product Name: {{ product.name }}</a></div>
         <div>Description: {{ product.description }}</div>
         <div>Purchase Cost: {{ product.cost }}</div>
         <div>Selling Price: {{ product.price }}</div>
