--- a/templates/products/new.html
+++ b/templates/products/new.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Add New Product</h2>
-<form action="/products" method="POST">
+<form action="/products" method="POST" id="new_product">
     <div>
         <label for="name">Product Name: </label>
         <input type="text" id="product_name" name="name"><br>
