product list has images to match category

--- a/static/style.css
+++ b/static/style.css
@@ -25,12 +25,16 @@ h2 {
 
 .each_product {
     outline: 2px solid blue;
+    margin: 1rem;
     flex-direction: column;
     text-align: center;
-    margin: 1rem;
+    
 }
 
 #new_product {
     outline: 2px solid green;
     text-align: center;
+}
+#picture {
+    height: 9rem;
 }
