--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -9,18 +9,17 @@
 <section>
     <div class="each_product">
         {% if product.product_type.name == "Weapons" %}
-        <img src="{{url_for('static', filename='images/weapon_picture.jpeg')}}" align="content" id="picture"/>
+        <img src="{{url_for('static', filename='images/weapon_picture.jpeg')}}" align="content" id="picture_all"/>
         
         {% elif product.product_type.name == "Potions" %}
-        <img src="{{url_for('static', filename='images/potion_pic.jpeg')}}" align="content" id="picture"/>
+        <img src="{{url_for('static', filename='images/potion_pic.jpeg')}}" align="content" id="picture_all"/>
         
         {% elif product.product_type.name == "Armor" %}
-        <img src="{{url_for('static', filename='images/armor_pic.png')}}" align="content" id="picture"/>
+        <img src="{{url_for('static', filename='images/armor_pic.png')}}" align="content" id="picture_all"/>
 
         {% endif %}
 
         <div><a href="/products/{{product.id}}" >Product Name: {{ product.name }}</a></div>
-        <!-- <div>Description: {{ product.description }}</div> -->
         <div>Purchase Cost: {{ product.cost }}</div>
         <div>Selling Price: {{ product.price }}</div>
         <div>Categorie: {{ product.product_type.name }}</div><br>
