Added weapons.html, changed base to include a filter category with weapons currently working, added counter for weapon types

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,13 @@
                 <li><a href="/products/new">New Product</a></li>
             </ul>
         </nav>
+        
+        <div id="myBtnContainer" align="right">
+                <a href="/products"><input type=button value='Show All'></a>
+                <a href="/products/weapons"><input type=button value='Weapons'></a>
+                <a href="/products/potions"><input type=button value='Potions'></a>
+                <a href="/products/armors"><input type=button value='Armors'></a>
+              </div>
     </header>
     <div>
         {% block content %}
