added working potions html page with stock counter

--- a/templates/products/weapons.html
+++ b/templates/products/weapons.html
@@ -4,10 +4,10 @@
 
 <div>
     STOCK LEVEL: <br>
-    Swords: {{ counter[0] }}
-    Axes: {{ counter[1] }}
-    Spears: {{ counter[2] }}
-    Shields: {{ counter[3] }}
+    Swords: {{ counter[0] }}<br>
+    Axes: {{ counter[1] }}<br>
+    Spears: {{ counter[2] }}<br>
+    Shields: {{ counter[3] }}<br>
 </div>
 
 {% for weapon in weapons %}
