Added filter for armors

--- a/templates/products/weapons.html
+++ b/templates/products/weapons.html
@@ -46,7 +46,7 @@
 
         {% endif %}
 
-        <div>Product Name: {{ weapon.name }}</div>
+        <div>{{ weapon.name }}</div>
         <div>Purchase Cost: {{ weapon.cost }}</div>
         <div>Selling Price: {{ weapon.price }}</div>
         <div>Categorie: {{ weapon.product_type.name }}</div><br>
