--- a/templates/products/potions.html
+++ b/templates/products/potions.html
@@ -21,7 +21,7 @@
             {% elif potion.name == "Strength Potion" %}
             <img src="{{url_for('static', filename='/images/strength_potion_pic.png')}}" align="content" class="product_picture"/>
         {% endif %}
-        <div>Product Name: {{ potion.name }}</div>
+        <div>{{ potion.name }}</div>
         <div>Purchase Cost: {{ potion.cost }}</div>
         <div>Selling Price: {{ potion.price }}</div>
         <div>Categorie: {{ potion.product_type.name }}</div><br>
