--- a/templates/products/armors.html
+++ b/templates/products/armors.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section>
-    <div>STOCK LEVEL: <br>
+
+<div>STOCK LEVEL: <br>
     Light Armor Set: {{ counter[0] }}<br>
     Medium Armor Set: {{ counter[1] }}<br>
     Heavy Armor Set: {{ counter[2] }}<br>
     </div>
-    
+{% for armor in armors %}
 
-    <div class="each_product">
-        {% for armor in armors %}
-
-        {% if armor.name == "Light Armor" %}
+<section>
+     <div class="each_product">
+        
+      {% if armor.name == "Light Armor" %}
         <img src="{{url_for('static', filename='/images/light_armor_pic.png')}}" align="content" class="product_picture"/>
             
             {% elif armor.name == "Medium Armor" %}
@@ -24,16 +24,16 @@
         <div><a href="/products/{{armor.id}}">{{ armor.name }}</a></div>
         <div>Purchase Cost: {{ armor.cost }}</div>
         <div>Selling Price: {{ armor.price }}</div>
-        <div>Categorie: {{ armor.product_type.name }}</div><br>
+        <div>Category: {{ armor.product_type.name }}</div><br>
         
         <form action="/products/{{ armor.id }}/delete" method="POST">
             <input type="submit" value="Delete">
         </form>
 
-        {% endfor %}
+        
      </div>
 
 
 </section>
-
+{% endfor %}
 {% endblock %}
