--- a/templates/products/potions.html
+++ b/templates/products/potions.html
@@ -1,18 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section>
-    <div>STOCK LEVEL: <br>
+<div>STOCK LEVEL: <br>
     Health Potions: {{ counter[0] }}<br>
     Mana Potions: {{ counter[1] }}<br>
     Strength Potions: {{ counter[2] }}<br>
-    </div>
-    
-
+</div>
+{% for potion in potions %}
+<section>
     <div class="each_product">
-        {% for potion in potions %}
-
-        {% if potion.name == "Health Potion" %}
+            {% if potion.name == "Health Potion" %}
             <img src="{{url_for('static', filename='/images/health_potion_pic.png')}}" align="content" class="product_picture"/>
             
             {% elif potion.name == "Mana Potion" %}
@@ -24,14 +21,14 @@
         <div><a href="/products/{{potion.id}}">{{ potion.name }}</a></div>
         <div>Purchase Cost: {{ potion.cost }}</div>
         <div>Selling Price: {{ potion.price }}</div>
-        <div>Categorie: {{ potion.product_type.name }}</div><br>
+        <div>Category: {{ potion.product_type.name }}</div><br>
         <form action="/products/{{ potion.id }}/delete" method="POST">
             <input type="submit" value="Delete">
         </form>
-        {% endfor %}
+        
      </div>
-
-
+     
 </section>
+{% endfor %}
 
 {% endblock %}
