--- a/templates/products/weapons.html
+++ b/templates/products/weapons.html
@@ -48,12 +48,13 @@
         <div><a href="/products/{{weapon.id}}">{{ weapon.name }}</a></div>
         <div>Purchase Cost: {{ weapon.cost }}</div>
         <div>Selling Price: {{ weapon.price }}</div>
-        <div>Categorie: {{ weapon.product_type.name }}</div><br>
-        <br>
+        <div>Category: {{ weapon.product_type.name }}</div><br>
+        <form action="/products/{{ weapon.id }}/delete" method="POST">
+            <input type="submit" value="Delete">
+        </form>    
+    
     </div>
-    <form action="/products/{{ weapon.id }}/delete" method="POST">
-        <input type="submit" value="Delete">
-    </form>
+    
 </section>
 {% endfor %}
 
