--- a/templates/products/armors.html
+++ b/templates/products/armors.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div>STOCK LEVEL: <br>
+<div class="stock-level">STOCK LEVEL: <br>
     Light Armor Set: {{ counter[0] }}<br>
     Medium Armor Set: {{ counter[1] }}<br>
     Heavy Armor Set: {{ counter[2] }}<br>
