--- a/templates/products/potions.html
+++ b/templates/products/potions.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div>STOCK LEVEL: <br>
+<div class="stock-level">STOCK LEVEL: <br>
     Health Potions: {{ counter[0] }}<br>
     Mana Potions: {{ counter[1] }}<br>
     Strength Potions: {{ counter[2] }}<br>
