--- a/templates/products/weapons.html
+++ b/templates/products/weapons.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div>
+<div class="stock-level">
     STOCK LEVEL: <br>
     Swords: {{ counter[0] }}<br>
     Axes: {{ counter[1] }}<br>
