--- a/templates/products/potions.html
+++ b/templates/products/potions.html
@@ -49,6 +49,10 @@
         <div>Purchase Cost: {{ potion.cost }}</div>
         <div>Selling Price: {{ potion.price }}</div>
         <div>Category: {{ potion.product_type.name }}</div><br>
+        {% set markup = (((potion.price - potion.cost)/ potion.cost) * 100)| int %}
+        <div>Markup: {{markup}}% </div>
+
+
         <form action="/products/{{ potion.id }}/delete" method="POST">
             <input type="submit" value="Delete">
         </form>
