--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-TESTING PAGE
-
+<section id="homepage">
+    <h2>WELCOME TO THE HOMEPAGE</h2> 
+    <!-- <img src="{{url_for('static', filename='/images/store_pic.png')}}" align="content" id="home_picture"/> -->
+</section>
 {% endblock %}
