--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -4,6 +4,12 @@
 
     
 <h2>List of Products</h2>
+<div class="option-filter">
+    <a href="/products"><input type=button value='Show All'></a>
+    <a href="/products/weapons"><input type=button value='Weapons'></a>
+    <a href="/products/potions"><input type=button value='Potions'></a>
+    <a href="/products/armors"><input type=button value='Armors'></a>
+  </div>
 {% for product in products %}
 
 <section>
