--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -2,6 +2,12 @@
 {% block content %}
 
 <section>
+    <div class="option-filter">
+        <a href="/products"><input type=button value='Show All'></a>
+        <a href="/products/weapons"><input type=button value='Weapons'></a>
+        <a href="/products/potions"><input type=button value='Potions'></a>
+        <a href="/products/armors"><input type=button value='Armors'></a>
+      </div>
     <div class = "single-product">
         <div class="single-product-items">
             <div>
