changed images for silver/gold swords and shield

--- a/static/style.css
+++ b/static/style.css
@@ -78,7 +78,8 @@ h2 {
     margin-right: 25rem;
     padding: 2rem;
     margin-top: 3rem;
-    background-color: rgb(244, 234, 219)
+    background-color: rgb(244, 234, 219);
+    color:black
 }
 
 .product_picture {
