--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -30,10 +30,10 @@
             <img src="{{url_for('static', filename='/images/bronze_sword_pic.webp')}}" align="content" class="product_picture"/>
             
             {% elif product.name == "Silver Sword" %}
-            <img src="{{url_for('static', filename='/images/silver_sword_pic.jpeg')}}" align="content" class="product_picture"/>
+            <img src="{{url_for('static', filename='/images/silver_sword_pic.png')}}" align="content" class="product_picture"/>
             
             {% elif product.name == "Gold Sword" %}
-            <img src="{{url_for('static', filename='/images/gold_sword_pic.jpeg')}}" align="content" class="product_picture"/>
+            <img src="{{url_for('static', filename='/images/gold_sword_pic.png')}}" align="content" class="product_picture"/>
 
             {% elif product.name == "Bronze Axe" %}
             <img src="{{url_for('static', filename='/images/Bronze_axe_pic.webp')}}" align="content" class="product_picture"/>
@@ -54,7 +54,7 @@
             <img src="{{url_for('static', filename='/images/gold_spear_pic.png')}}" align="content" class="product_picture"/>
 
             {% elif product.name == "Shield" %}
-            <img src="{{url_for('static', filename='/images/shield_pic.jpeg')}}" align="content" class="product_picture"/>
+            <img src="{{url_for('static', filename='/images/shield_pic.png')}}" align="content" class="product_picture"/>
 
             {% elif product.name == "Health Potion" %}
             <img src="{{url_for('static', filename='/images/health_potion_pic.png')}}" align="content" class="product_picture"/>
